--- a/src/sass/components/_category_cards.scss
+++ b/src/sass/components/_category_cards.scss
@@ -10,7 +10,15 @@
     cursor: pointer;
 }
 
-.train-color {
+.category-list-color {
     background: $color_background;
     color: $color_white;
+}
+
+.titleCategory {
+    margin: 35px 0 0 10px;
+}
+
+.breadcrumb {
+    margin-top: 30px;
 }
