--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -23,3 +23,12 @@
 .navigation {
     padding: 80px 0 0 25px;
 }
+
+.nav-item:hover {
+    cursor: pointer;
+    color: $neutral-lighter;
+}
+
+.nav-item.active {
+    color: $neutral-lighter;
+}
