--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -3,7 +3,7 @@
 }
 
 .nav-link {
-    color: $color_white;
+    color: $color_additional;
 }
 
 .header__navigation.active {
@@ -24,11 +24,20 @@
     padding: 80px 0 0 25px;
 }
 
-.nav-item:hover {
+.nav-link:hover {
     cursor: pointer;
     color: $neutral-lighter;
 }
 
-.nav-item.active {
+.nav-link.active {
     color: $neutral-lighter;
+}
+
+a:hover {
+    text-decoration: none;
+    color: $color_additional;
+}
+
+.card-text:hover {
+    color: $color_additional;
 }
