feat: add flip to cards

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,8 @@
 @import "components/navigation";
 @import "components/switcher";
 @import "components/category_cards";
+@import "components/reverse-icon";
+@import "components/flip-card";
 
 //Layouts
 @import "layouts/header";
