--- a/src/sass/components/_category_cards.scss
+++ b/src/sass/components/_category_cards.scss
@@ -4,11 +4,14 @@
 
 .card {
     margin-bottom: 30px;
+    border: none;
+    // transform-style: preserve-3d;
 }
 
-.card:hover {
-    cursor: pointer;
-}
+// .card:hover {
+//     cursor: pointer;
+//     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+// }
 
 .category-list-color {
     background: $color_background;
@@ -22,4 +25,10 @@
 .breadcrumb {
     margin-top: -14px;
     margin-bottom: -13px;
+}
+
+.card-game {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 6px;
 }
