refactor: change menu structure

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -3,7 +3,7 @@ $color_additional: grey;
 $color_background: #78C2AD;
 $color_menu: #ffffff;
 
-$color_switcher_play: #6CC3D5;
+$color_play: #6CC3D5;
 $neutral-lighter: #F3F3F3;
 $neutral-light: #E2E5E5;
 $color_white: #ffffff;
