--- a/src/sass/components/_category_cards.scss
+++ b/src/sass/components/_category_cards.scss
@@ -19,6 +19,10 @@
     color: $color_white;
 }
 
+.play-mode {
+    background: $color_play;
+}
+
 .titleCategory {
     margin: 35px 0 0 10px;
 }
@@ -26,6 +30,10 @@
 .breadcrumb {
     margin-top: -14px;
     margin-bottom: -13px;
+}
+
+.breadcrumb.play-mode {
+    background: $color_play;
 }
 
 .card-game {
