--- a/src/sass/components/_switcher.scss
+++ b/src/sass/components/_switcher.scss
@@ -1,89 +1,3 @@
-// input[type="checkbox"] {
-//     position: relative;
-//     display: inline-block;
-//     -webkit-appearance: none;
-//     -webkit-tap-highlight-color: transparent;
-//     height: 2em;
-//     width: 7em;
-//     font-size: 2em;
-//     border-radius: 3.4em;
-//     background-color: #6CC3D5;
-//     border-color: transparent;
-//     background-clip: padding-box;
-//     color: #E2E5E5;
-//     vertical-align: middle;
-
-//   &::before {
-//     content: "";
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     bottom: 0;
-//     right: 50%;
-//     background-color: #ffffff;
-//     border-radius: 79%;
-//     border: 0.125em solid transparent;
-//     background-clip: padding-box;
-//     transform-origin: right center;
-//     transform: translateZ(0);
-//     backface-visibility: hidden;
-//     animation: switch-off-transform 0.25s ease-out forwards;
-//     z-index: 2;
-//   }
-
-//   &::after {
-//     position: absolute;
-//     left: 2.1em;
-//     top: 0.4em;
-//     line-height: 2;
-//     font-size: 23px;
-//     font-weight: bold;
-//     font-family: "Helvetica Neue";
-//     text-transform: uppercase;
-//     content: "play train";
-//     letter-spacing: 0;
-//     word-spacing: 5px;
-//     z-index: 1;
-//   }
-
-//   &:focus {
-//     color: $color_white;
-//     border-color: transparent;
-//     background-color: $color_switcher_play;
-//     outline: none;
-//   }
-
-
-//   &:checked {
-//     color: $color_white;
-//     background-color: $color_background;
-//     border-color: transparent;
-//     &::before{
-//       transform-origin: left center;
-//       animation: switch-on-transform 0.25s ease-out forwards;
-//     }
-//   }
-// }
-  
-// .switch {
-//   display: inline-block;
-//   transform: scale(0.5);
-//   margin: 1.5em 0;
-// }
-  
-  
-// @keyframes switch-on-transform {
-//   0% {
-//     transform: translateX(0) scaleX(1) translateZ(0);
-//   }
-//   25% {
-//     transform: translateX(0) scaleX(1.33) translateZ(0);
-//   }
-//   100% {
-//     transform: translateX(100%) scaleX(1) translateZ(0);
-//   }
-// }
-
 .switch {
 	position: relative;
 	display: block;
@@ -110,9 +24,9 @@
 	position: relative;
 	display: block;
 	height: inherit;
-	font-size: 10px;
+	font-size: 16px;
 	text-transform: uppercase;
-	background: #eceeef;
+	background: $color_play;
 	border-radius: inherit;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
 	box-sizing:content-box;
@@ -131,9 +45,10 @@
 .switch-label:before {
 	content: attr(data-off);
 	right: 11px;
-	color: #aaaaaa;
+	color: #FFFFFF;
 	text-shadow: 0 1px rgba(255, 255, 255, 0.5);
 }
+
 .switch-label:after {
 	content: attr(data-on);
 	left: 11px;
@@ -142,7 +57,7 @@
 	opacity: 0;
 }
 .switch-input:checked ~ .switch-label {
-	background: #E1B42B;
+	background: $color_background;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);
 }
 .switch-input:checked ~ .switch-label:before {
