feat: add repeat button

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import "components/category_cards";
 @import "components/reverse-icon";
 @import "components/flip-card";
+@import "components/repeat-button";
 
 //Layouts
 @import "layouts/header";
