--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,7 @@
 @import "components/reverse-icon";
 @import "components/flip-card";
 @import "components/repeat-button";
+@import "components/stars";
 
 //Layouts
 @import "layouts/header";
