--- a/src/sass/components/_repeat-button.scss
+++ b/src/sass/components/_repeat-button.scss
@@ -1,5 +1,5 @@
 .repeat-button {
-    background-image: url(../assets//icon-repeat.svg);
+    background-image: url(../assets/icon-repeat.svg);
     background-repeat: no-repeat;
     width: 30px;
     height: 48px;
